# course_work_summer_c

./: CMakeLists.txt  Makefile  README.md  a.out  bmpp  fixed.c  helpmenu.c  helpmenu.h  main.c
BMP_parser/: bmp_parser.c  bmp_parser.h  bmp_structs.h
CLI/: command_parser.c  command_parser.h  commands.c  commands.h  helpmenu  helpmenu.c  helpmenu.h  parse_collage.c  parse_collage.h  parse_fill.c  parse_fill.h  parse_find_rect.c  parse_find_rect.h  parse_triangle.c  parse_triangle.h
Error_handling/: error_handler.c  error_handler.h
Geometry/: find_max_rect.c  find_max_rect.h  general.c  general.h  line_draw.c  line_draw.h  rectangle.c  rectangle.h  triangle.c  triangle.h
Image/: bmp_parser.c  bmp_parser.h  bmp_structs.h  canvas.c  canvas.h  collage.c  collage.h
Stack/: stack.c  stack.h
Testing/: error_handler.c  error_handler.h
Tests/Processed/: new.b
